--- a/CreateVirtualMachine.yml
+++ b/CreateVirtualMachine.yml
@@ -2,9 +2,9 @@
 - hosts: localhost
   connection: local
 
-  vars_prompt:
-    - name: password
-      prompt: "Enter local administrator password"
+  # vars_prompt:
+  #   - name: password
+  #     prompt: "Enter local administrator password"
 
   tasks:
     - name: Create resource group
