--- a/ConfigureWindowsVirtualServer.yaml
+++ b/ConfigureWindowsVirtualServer.yaml
@@ -1,7 +1,7 @@
 ---
-- hosts: localhost
+- hosts: all
   gather_facts: False
-
+  
   vars:
     ansible_user: azureuser
     ansible_password: '@Azureuser'
