--- a/DeleteResourceGroupWithContent.yml
+++ b/DeleteResourceGroupWithContent.yml
@@ -1,5 +1,9 @@
-- name: Delete a resource group including resources it contains
-  azure_rm_resourcegroup:
-    name: rg-cs-ansible
-    force_delete_nonempty: yes
-    state: absent
+---
+- hosts: localhost
+  connection: local
+  tasks:
+  - name: Delete a resource group including resources it contains
+    azure_rm_resourcegroup:
+      name: rg-cs-ansible
+      force_delete_nonempty: yes
+      state: absent
