Fix host to local and remove network watcher resource group

--- a/CreateVirtualMachine.yml
+++ b/CreateVirtualMachine.yml
@@ -5,6 +5,7 @@
   # vars_prompt:
   #   - name: password
   #     prompt: "Enter local administrator password"
+  # // Replace by Ansible Tower's survey
 
   tasks:
     - name: Create resource group
